# multisend

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  empty-contract.wasm  empty_contract.wasm
schema/: handle_msg.json  receive_msg.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
