[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "0.14.0" }
cosmwasm-storage = { version = "0.14.0" }
cw-storage-plus = "0.6.0"
cw20 = "0.6.1"
cw2 = "0.6.1"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cosmwasm-schema = "0.14.1"
